--- a/src/assets/style/styleIndex.css
+++ b/src/assets/style/styleIndex.css
@@ -1,3 +1,10 @@
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
 .content {
     margin: 80px 80px 80px 80px;
 }
