--- a/src/assets/style/styleNavBarre.css
+++ b/src/assets/style/styleNavBarre.css
@@ -7,7 +7,7 @@
     align-items: center;
     text-align: center;
     color: white;
-    background-image: url('../../../public/bannier.webp');
+    background-image: url('../../../public/video_bk.mp4');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -38,7 +38,7 @@
   }
   
   .nav-links a {
-    color: white;
+    color: #00ff88;
     text-decoration: none;
     font-size: 1.1em;
     padding: 5px 10px;
@@ -90,4 +90,41 @@
       padding: 15px;
     }
   }
-  
+
+  /* Style the video: 100% width and height to cover the entire window */
+#myVideo {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+/* Add some content at the bottom of the video/page */
+.content-video {
+  position: absolute;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+.content-video h1 {
+  color: #00ff88;
+}
+
+/* Style the button used to pause/play the video */
+#myBtn {
+  width: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+}
+
+#myBtn:hover {
+  background: #ddd;
+  color: black;
+}
