--- a/src/assets/style/styleHome.css
+++ b/src/assets/style/styleHome.css
@@ -9,6 +9,9 @@
     padding: 20px;
     gap: 20px;
   }
+  .container.gray{
+    background-color: #2c2c2c;
+  }
   
   /* Text Content */
   .content-home {
